Fix Large Headings

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,31 @@ body {
     background-color: gray;
 }
 
+/* Styling Rules for Headings */
+h1 {
+    font-size: 1.5em;
+}
+
+h2 {
+    font-size: 1.375em;
+}
+
+h3 {
+    font-size: 1.25em;
+}
+
+h4 {
+    font-size: 1.125em;
+}
+
+h5 {
+    font-size: 0.875em;
+}
+
+h6 {
+    font-size: 0.75em;
+}
+
 /* Styling for the Content Within the Main Container */
 .container {
     margin-top: 1em;
